--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,32 @@
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+ font-size: 28px;
+  margin: 5px; 
+  padding: 5px;
+  color:  white
+}
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+ font-size: 28px;
+  margin: 5px; 
+  padding: 5px;
+  color:  #e24e42
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif; 
+  padding: 1px
+}
+
 li {
   padding: 5px;
-  margin: 5px;
-  background: #faebd7;
+  margin-right: 5px;
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 20px;
+  color: rgb(58, 58, 58);
+  background: white
+
 }
 
 .label {
@@ -15,5 +40,34 @@ li {
 }
 
 .form-group {
-  margin-bottom: 5px;
+  padding: 15px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: 16px;
+  color: rgb(58, 58, 58)
+}
+
+.delete-burger {
+  background: #eeeeee;
+  border-color: thistle;
+}
+.change-burger {
+  background: #00c2cb;
+  color: white;
+  border-color: turquoise;
+  font-weight: bold;
+}
+
+#add-burger {
+  float: left;
+  background: #ffbd59;
+  color: white;
+  border-color:#00c2cb;
+  font-weight: bold;
+}
+
+img {
+  float: left;
 }
