--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-	<title>The Burger Shop</title>
+	<title>Big Patties Burger Shack</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/assets/js/burger.js"></script>
 </head>
