--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,30 +1,34 @@
-h1 {
-  font-family: Arial, Helvetica, sans-serif;
- font-size: 28px;
-  margin: 5px; 
-  padding: 5px;
-  color:  white
+.container {
+  align-content: center;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-h2 {
-  font-family: Arial, Helvetica, sans-serif;
- font-size: 28px;
-  margin: 5px; 
+
+.titles {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 28px;
+  margin-top: 20px;
   padding: 5px;
   color:  #e24e42
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: 'Roboto Condensed', sans-serif;
+ 
   padding: 1px
+}
+
+ul.a {
+  list-style-type: circle;
+  color: #e24e42
 }
 
 li {
   padding: 5px;
   margin-right: 5px;
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
-  color: rgb(58, 58, 58);
+  color: grey;
   background: white
 
 }
@@ -36,38 +40,58 @@ li {
 .create-update-form {
   padding: 5px;
   margin: 5px;
-  background: aqua;
 }
 
 .form-group {
-  padding: 15px;
-  margin-right: 5px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  font-family: Arial, Helvetica, sans-serif; 
+  padding: 5px;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 16px;
-  color: rgb(58, 58, 58)
+
+}
+
+.add {
+  background: #e24e42;
+  color: white;
+  border-color: thistle;
+  font-weight: bold;
+  font-size: 10px;
 }
 
 .delete-burger {
   background: #eeeeee;
   border-color: thistle;
+  font-size: 10px;
 }
 .change-burger {
   background: #00c2cb;
   color: white;
   border-color: turquoise;
   font-weight: bold;
+  font-size: 10px;
 }
 
 #add-burger {
-  float: left;
-  background: #ffbd59;
-  color: white;
-  border-color:#00c2cb;
-  font-weight: bold;
+  box-align: baseline;
+  padding-top: 155px;
 }
 
+#ready {
+  box-align: center;
+    margin-top: 20px ;
+    padding: 15px;
+
+  }
+
+#eaten {
+  box-align: center;
+  margin-top: 20px ;
+    padding: 15px;
+    
+ 
+  }
+
 img {
-  float: left;
+
+size: 100%;
 }
+
